Implementeret HentOrdFraDR med AsyncTask

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.brintaflevering2">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoserActivity"></activity>
+        <activity android:name=".WordListActivity"></activity>
+        <activity android:name=".LoserActivity" />
         <activity android:name=".WinnerActivity" />
         <activity android:name=".GalgeActivity" />
         <activity android:name=".MainActivity">
